# stream-curator

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
desktop/: README.md  main.js  package-lock.json  package.json  preload.js
desktop/scripts/: build-portable.ps1  build-python-runtime.py  build-release.ps1  fetch-electron-runtime.ps1  set-exe-icon.mjs
frontend/: README.md  app.js  index.html  styles.css
src/stream_curator/: __init__.py  cli.py  config.py  hot_service.py  logging.py  push_llm.py  push_service.py  push_store.py  push_worker.py  reader_comments.py  search_service.py  worker_process.py
src/stream_curator/connectors/: __init__.py  base.py  bilibili.py  subprocess.py  xiaohongshu.py  zhihu.py
src/stream_curator/models/: __init__.py  feed_item.py
tests/: test_config.py  test_connectors.py  test_hot_service.py  test_push_service.py  test_push_store.py  test_reader_comments.py  test_search_service.py  test_worker_process.py
