[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-curator"
version = "0.1.0"
description = "Local-first personal feed curator for bilibili, zhihu, and xiaohongshu."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "click>=8.1",
]

[project.scripts]
stream-curator = "stream_curator.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/stream_curator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["third-party", "desktop", "data"]
